--- a/index.html
+++ b/index.html
@@ -22,9 +22,30 @@
         color: rgb(0, 33, 105);
       }
 
-      .summary-item .summary-item-title {
+      .summary-item-title {
         color: rgb(128, 144, 180);
         font-size: 14px;
+      }
+
+      .grouped-inputs {
+        display: flex;
+        align-items: center;
+        justify-content: stretch;
+        gap: 2px;
+        margin-bottom: 10px;
+      }
+      .grouped-inputs select {
+        flex: 1;
+        background-color: rgb(245, 247, 255);
+        border: 1px solid rgb(217, 222, 232);
+        border-radius: 8px;
+        padding: 2px 5px;
+        text-align: center;
+      }
+      .time-spacer {
+        font-size: 20px;
+        font-weight: 700;
+        color: rgb(128, 144, 180);
       }
 
       .grouped-switches {
@@ -66,6 +87,62 @@
     <div class="summary-item">
       <span class="summary-item-value"><span id="count">0</span></span>
       <span class="summary-item-title">Unfilled days</span>
+    </div>
+
+    <div class="grouped-inputs" id="time">
+      <select id="start">
+        <option value="0">00</option>
+        <option value="1">01</option>
+        <option value="2">02</option>
+        <option value="3">03</option>
+        <option value="4">04</option>
+        <option value="5">05</option>
+        <option value="6">06</option>
+        <option value="7">07</option>
+        <option value="8">08</option>
+        <option value="9" selected>09</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+        <option value="23">23</option>
+      </select>
+      <span class="time-spacer">-</span>
+      <select id="end">
+        <option value="00">00</option>
+        <option value="01">01</option>
+        <option value="02">02</option>
+        <option value="03">03</option>
+        <option value="04">04</option>
+        <option value="05">05</option>
+        <option value="06">06</option>
+        <option value="07">07</option>
+        <option value="08">08</option>
+        <option value="09">09</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18" selected>18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+        <option value="23">23</option>
+      </select>
     </div>
 
     <div class="grouped-switches grouped-switches--buttons">
